tests/type-errors/09-comparison-type.flt
// Comparison operators require int
// --- Command: dotnet run --project FunLang -- --emit-type %input 2>&1
// --- ExitCode: 1
// --- Input:
true < false
// --- Output:
TypeError: Cannot unify bool with int
